<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Asteroid Rush</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_title">Asteroid Rush</string>
    <string name="start_game">Start Game</string>
    <string name="app_id">638768466197116</string>
    <string name="facebook_enable_shared_preferences_key">com.karacasoft.asteroidrush2.facebookshareenabled</string>
    <string name="extra_graphics_shared_pref_key">com.karacasoft.asteroidrush2.extragraphicsactive</string>
    <string name="title_activity_show_statistics">Statistics</string>
    
    <string name="str_hold_to_continue">HOLD HERE TO CONTINUE</string>
	<string name="str_level">LEVEL</string>
	<string name="str_score">SCORE:</string>
	<string name="str_distance">DISTANCE:</string>
	<string name="str_score_on_list">Score:</string>
	<string name="str_distance_on_list">Distance:</string>
	<string name="str_combined_score">Combined Score:</string>
	<string name="str_statistics">Statistics</string>
	<string name="str_high_scores">Local Highscores</string>
	<string name="str_global_top_10">Global Top 10</string>
	<string name="str_music_on">Enable Music</string>
	<string name="str_sound_on">Enable Sound</string>
	<string name="str_type_nickname" tools:ignore="TypographyEllipsis">Type your nickname here...</string>
	<string name="str_acceptance">Send my scores to Asteroid Rush Global Top 10 with that nickname</string>
	<string name="str_err_no_connection">No available connection. Failed to send score</string>
	
	
</resources>
