<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_game"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startGameButton"
        android:layout_centerHorizontal="true"
        android:text="@string/str_statistics"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statisticsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/str_high_scores"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/globalHighScoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highScoresButton"
        android:layout_centerHorizontal="true"
        android:text="@string/str_global_top_10"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text_version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textColor="#DDDDDD"
        android:textSize="9sp"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/music_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startGameButton"
        android:layout_alignParentLeft="true"
        android:text="@string/str_music_on"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/sound_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startGameButton"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:text="@string/str_sound_on"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/music_on"
        android:layout_alignParentLeft="true"
        android:checked="true"
        android:text="@string/str_acceptance"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox1"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/str_type_nickname"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" />

</RelativeLayout>